--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marie Maxham",
   "license": "ISC",
   "dependencies": {
-    "@googlemaps/google-maps-services-js": "^3.3.35"
+    "@googlemaps/google-maps-services-js": "^3.3.35",
+    "parse-duration": "^1.1.0"
   }
 }
